--- a/DataAccessObjects/DataAccessObjects.csproj
+++ b/DataAccessObjects/DataAccessObjects.csproj
@@ -9,7 +9,6 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="Mappers\" />
-    <Folder Include="FluentApis\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
@@ -27,6 +26,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
   </ItemGroup>
 
 </Project>
