--- a/DataAccessObjects/DataAccessObjects.csproj
+++ b/DataAccessObjects/DataAccessObjects.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
+    <ProjectReference Include="..\MyRazorPage\MyRazorPage.csproj" />
   </ItemGroup>
 
 </Project>
