--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,20 @@ hs_err_pid*
 replay_pid*
 MyRazorPage/.vs/MyRazorPage/v17/.suo
 MyRazorPage/.vs/MyRazorPage/v17/.suo
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/4cacf744-3806-41fd-9c83-d7bef5529e06.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/912731ed-b1b6-4c77-bb20-5e6aaf595316.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/4cacf744-3806-41fd-9c83-d7bef5529e06.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/988d3e34-4026-49e7-ba12-9cfc29507ee6.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/d01a94dd-c337-4681-9244-eb279d63c694.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/912731ed-b1b6-4c77-bb20-5e6aaf595316.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/4cacf744-3806-41fd-9c83-d7bef5529e06.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/06daf94e-937e-470d-bee4-eead051fa3f9.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/1071627d-fc67-43fd-94ef-fb4ad55feb07.vsidx
+MyRazorPage/.vs/MyRazorPage/v17/.suo
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/ecef4f19-61dc-4ab0-a29e-210c68f75a14.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/e4d737f7-18c9-4a08-a05f-99f07251618f.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/06daf94e-937e-470d-bee4-eead051fa3f9.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/4cacf744-3806-41fd-9c83-d7bef5529e06.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/581ffed7-8ce0-4204-aa93-01871669f9d3.vsidx
+MyRazorPage/.vs/MyRazorPage/FileContentIndex/7dc0c9f3-e413-4108-8c4b-f615a950252d.vsidx
+MyRazorPage/.vs/MyRazorPage/v17/.suo
