--- a/DataAccessObjects/DataAccessObjects.csproj
+++ b/DataAccessObjects/DataAccessObjects.csproj
@@ -7,11 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="IRepositories\" />
     <Folder Include="Mappers\" />
     <Folder Include="IServices\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
