--- a/GoodExchangeApplication/MyRazorPage/MyRazorPage.csproj
+++ b/GoodExchangeApplication/MyRazorPage/MyRazorPage.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\DataAccessObjects\DataAccessObjects.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Test\" />
+  </ItemGroup>
+
 </Project>
