--- a/GoodExchangeApplication/DataAccessObjects/DataAccessObjects.csproj
+++ b/GoodExchangeApplication/DataAccessObjects/DataAccessObjects.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UnitOfWork\" />
+  </ItemGroup>
+
 </Project>
